--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "nodemon": "^3.0.1",
+    "razorpay": "^2.9.2",
     "slugify": "^1.6.6"
   }
 }
